# nusa-crowd

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DATALOADER.md  Makefile  POINTS.id.md  POINTS.md  README.id.md  README.md  UPLOADING.id.md  UPLOADING.md  conda.yml  filtering_test.py  requirements.txt  setup.cfg  task_schemas.md  test.py  test_example.sh  test_example_source_only.sh  test_filtering.ipynb  update_readme.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: add-dataset.md
.github/workflows/: documentation.yml  run-test.yml  selfassign.yml  slash-command-dispatch.yml  update-readme.yml
docs/: POINTS.id.md  POINTS.md  UPLOADING.id.md
example/: example_nusacrowd.ipynb
examples/: scitail.py
nusacrowd/: __init__.py  config_helper.py
nusacrowd/nusa_datasets/: Untitled.ipynb
nusacrowd/nusa_datasets/barasa/: barasa.py
nusacrowd/nusa_datasets/bible_en_id/: bible_en_id.py
nusacrowd/nusa_datasets/bible_jv_id/: bible_jv_id.py
nusacrowd/nusa_datasets/bible_su_id/: bible_su_id.py
nusacrowd/nusa_datasets/casa/: casa.py
nusacrowd/nusa_datasets/cc100/: cc100.py
nusacrowd/nusa_datasets/coco_id/: coco_id.py
nusacrowd/nusa_datasets/cod/: cod.py
nusacrowd/nusa_datasets/code_mixed_jv_id/: code_mixed_jv_id.py
nusacrowd/nusa_datasets/code_mixed_mt/: code_mixed_mt.py
nusacrowd/utils/: constants.py
nusantara/: __init__.py  config_helper.py
nusantara/utils/: common_parser.py  constants.py
templates/: template.py
tests/: test_nusantara.py  test_nusantara_source_only.py
utils/: configs.py
(+267 files in other folders)
