[metadata]
name = nusacrowd
version = attr: nusacrowd.__version__

[options]
packages = find:
include_package_data = True
python_requires = >=3.7,<3.11
install_requires =
    loguru==0.5.3
    bioc==1.3.7
    pandas==1.3.3
    numpy>=1.20
    datasets==2.2.0
    black~=22.0
    flake8>=3.8.3
    isort>=5.0.0
    aiohttp==3.8.1
    pre-commit==2.19.0
    jsonlines>=3.1.0
    torchaudio>=0.11
    soundfile
    librosa
    nltk
    zstandard
    soundfile
    ffmpeg
    conllu
    openpyxl

[options.extras_require]
dev =
  black>=22.1.0,<22.2.0
  flake8>=3.8.3,<3.9.0
  isort>=5.0.0,<5.1.0
deploy = 
  build==0.7.0
  twine==4.0.0
ipython =
  ipython